# OpenBMS

./: .gitignore  CMakeLists.txt  CellBar.qml  DashboardPage.qml  Main.qml  ScanPage.qml  StatCard.qml  blemanager.cpp  blemanager.h  bmsdata.h  deploy.bat  installer.iss  main.cpp
